--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     nginx:
         image: nginx:latest
         ports:
-            - 8080:80
+            - 11080:80
         volumes:
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
         volumes_from:
@@ -28,6 +28,8 @@ services:
             - 9000
         volumes:
             - .:/var/www/html
+        environment:
+          XDEBUG_CONFIG: remote_host=10.0.0.3
 
 ###########################
 # Setup the testing container
